# trabalho-app-web-pubstore

./: .gitignore  README.md
backend/: .env  .gitignore  README.md  main.py  pyproject.toml  settings.py
backend/src/config/: database_session_manager.py  engine.py  get_db.py  get_db_session.py  init_db.py  session_manager.py
backend/src/controllers/: product.py  tokens.py
backend/src/crud/: abstract_repository.py  customer.py  customer_repository.py  order_repository.py  product.py  product_ordered_repository.py  product_repository.py
backend/src/database/: generate_seed.py  static_files_source.py
backend/src/database/data_seed/: beers.py  chopps.py  customers.py  sparklings.py  whiskeys.py  wines.py
backend/src/dependencies/: costumer.py  customer_auth.py  customer_auth_dep.py  db_session_dep.py  get_pwd_hash.py  get_settings.py  validate_price_range.py  validate_price_range_dep.py  validate_uuid4_dep.py  verify_pwd.py
backend/src/migrations/: customers.py  make_migration.py
backend/src/models/: costumer.py  customer.py  order.py  product.py  product_ordered.py
backend/src/routes/: order.py  product.py  product_ordered.py  token.py
backend/src/schemas/: __init__.py  base.py  customer.py  order.py  product.py  product_ordered.py
backend/src/seeds/: beers.py  chopps.py  customers.py  make_seed.py  products.py  sparklings.py  whiskeys.py  wines.py
backend/src/services/: product.py  token.py
backend/src/utils/: cpf_validator.py  generate_random_string.py  get_pwd_hash.py  get_settings.py  hash_value.py  is_valid_cpf.py  is_valid_uuid4.py  verify_hashed_value.py  verify_pwd.py
frontend/: .prettierignore  .prettierrc.js  app.json  eslint.config.js  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx  sign-in.tsx
(+124 files in other folders)
