[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.115.12",
    "orjson>=3.10.16",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.6",
    "types-passlib>=1.7.7.20250408",
]
